2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* configure.in:
	* libmuine/db.c: (db_unpack_pixbuf), (db_pack_pixbuf):
	* libmuine/db.h:
	* src/CoverDatabase.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PixbufUtils.cs:
	* src/Song.cs:

	Implemenet cover database.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* data/glade/ErrorDialog.glade:
	* data/glade/ProgressWindow.glade:
	* data/glade/SkipToWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Dialog fixes.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Tray icon show/hide fixes.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:

	Handle albums with a lot of artists in a nicer way.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Speed tweaks, select first row when opening row.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_get_length):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:

	Show max. 200 songs in the Add Song window if we are searching for
	a string with less than 3 chars.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* src/Album.cs:

	Sort by artist, instead of album name.

2004-01-18  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:
	* libmuine/pointer-list-view.c: (pointer_list_view_add_column):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/LibraryWindow.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Implement "Add album" window, fix window size saving.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* libmuine/pointer-list-view.c: (scroll_to_path),